--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,6 +110,8 @@ services:
     # image: rabbitmq:3-management
     #
     # You also have to change the flower command
+    networks:
+      - default
 
   flower:
     image: mher/flower
@@ -165,6 +167,8 @@ services:
     depends_on:
       - db
       - queue
+    networks:
+      - default
     env_file:
       - .env
     environment:
